--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/book
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=pass1234
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
@@ -10,4 +10,4 @@ spring.sql.init.mode=always
 #spring.jpa.properties.hibernate.format_sql = true
 
 #spring.jpa.show-sql=true
-#spring.sql.init.data-locations=classpath:data.sql
+#spring.sql.init.data-locations=classpath:Schema.sql
