--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.datasource.username=postgres
 spring.datasource.password=pass1234
 spring.jpa.hibernate.ddl-auto=none
 
+#logging.level.ROOT=INFO
+logging.level.org.springframework.orm.jpa=DEBUG
+#logging.level.org.springframework.transaction=DEBUG
+
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
